# hello-nucleo-touchlcd

./: Cargo.toml  LICENSE  README.md  memory.x
.cargo/: config
src/: main.rs
