[package]
authors = ["Akihiro Yamamoto <ak1211@mail.ak1211.com>"]
categories = ["embedded", "no-std"]
description = "hello, world"
documentation = "https://github.com/ak1211/hello-nucleo-oled/README.md"
keywords = ["arm", "cortex-m", "ssd1331"]
license = "Apache-2.0"
name = "hello-nucleo-oled"
repository = "https://github.com/ak1211/hello-nucleo-oled"
version = "0.1.0"
[dependencies]
ssd1331 = "0.1.3"
embedded-graphics = "0.4.9"
embedded-hal = "0.2.2"
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32f30x-hal]
features = ["rt"]
version = "0.2.0"

[profile]
[profile.dev]

[profile.release]
codegen-units = 1
debug = true
lto = true

